syntax = "proto3";

package coordinator;

option go_package = "github.com/aquare11e/media-downloader-bot/proto/coordinator";

import "common/common-types.proto";

// Coordinator service that orchestrates between Plex and Transmission services
service CoordinatorService {
  // Add torrent using magnet link
  rpc AddTorrentByMagnet(AddTorrentByMagnetRequest) returns (DownloadResponse) {}
  
  // Add torrent using base64 encoded file
  rpc AddTorrentByFile(AddTorrentByFileRequest) returns (DownloadResponse) {}
}

// Request to add torrent using magnet link
message AddTorrentByMagnetRequest {
  string request_id = 1;
  string magnet_link = 2;
  common.RequestType category = 3;
}

// Request to add torrent using base64 encoded file
message AddTorrentByFileRequest {
  string request_id = 1;
  string base64_file = 2;
  common.RequestType category = 3;
}

// Response containing download status
message DownloadResponse {
  string request_id = 1;
  string name = 2;
  DownloadStatus status = 3;
  string message = 4;
  double progress = 5;
  int32 eta = 6;
}

// Enum representing download status
enum DownloadStatus {
  DOWNLOAD_STATUS_UNSPECIFIED = 0;
  DOWNLOAD_STATUS_IN_PROGRESS = 1;
  DOWNLOAD_STATUS_SUCCESS = 2;
  DOWNLOAD_STATUS_ERROR = 3;
} 